--- a/package.json
+++ b/package.json
@@ -6,9 +6,19 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "aos": "^2.3.4",
+    "lodash-es": "^4.17.15",
+    "nuka-carousel": "^4.6.7",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-responsive-carousel": "^3.2.7",
+    "react-scripts": "3.4.1",
+    "react-scroll": "^1.7.16",
+    "react-step-progress-bar": "^1.0.3",
+    "react-typist": "^2.0.5",
+    "react-use-gesture": "^7.0.15",
+    "semantic-ui-react": "^0.88.2",
+    "styled-components": "^5.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
